refactor: use English terms: "line" and "tercet"
Instead of Italian "verso" and "terzina"
because in a RESTFul world,
the plural sounded weird
