# src/generated/swagger.json
@@ -51,7 +51,7 @@
 					"Canto XXXIII"
 				]
 			},
-			"Verso": {
+			"Line": {
 				"properties": {
 					"cantica": {
 						"$ref": "#/components/schemas/CanticaTitle"
@@ -59,7 +59,7 @@
 					"canto": {
 						"$ref": "#/components/schemas/CantoTitle"
 					},
-					"terzina": {
+					"tercet": {
 						"type": "number",
 						"format": "double"
 					},
@@ -74,7 +74,7 @@
 				"required": [
 					"cantica",
 					"canto",
-					"terzina",
+					"tercet",
 					"number",
 					"text"
 				],
@@ -97,16 +97,16 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/canticas/{cantica}/cantos/{canto}/versos/{verso}": {
+		"/canticas/{cantica}/cantos/{canto}/lines/{line}": {
 			"get": {
-				"operationId": "GetVerso",
+				"operationId": "GetLine",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Verso"
+									"$ref": "#/components/schemas/Line"
 								}
 							}
 						}
@@ -132,7 +132,7 @@
 					},
 					{
 						"in": "path",
-						"name": "verso",
+						"name": "line",
 						"required": true,
 						"schema": {
 							"format": "double",
